update books
